--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "firebase": "^9.15.0",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "zustand": "^4.1.5"
   },
   "devDependencies": {
+    "@ant-design/icons": "^4.8.0",
     "@types/node": "18.11.3",
-    "@types/react": "18.0.21",
+    "@types/react": "18.0.0",
     "@types/react-dom": "18.0.6",
+    "antd": "5.0.5",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1",
