--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.7.1",
     "zustand": "^4.1.5"
   },
