--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-geolocated": "^4.0.3",
+    "react-google-map-picker": "^1.2.3",
     "react-icons": "^4.7.1",
+    "react-location-picker": "^1.5.0",
     "zustand": "^4.1.5"
   },
   "devDependencies": {
