--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "chart.js": "^4.1.1",
     "firebase": "^9.15.0",
     "next": "latest",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.1.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-geolocated": "^4.0.3",
     "react-google-map-picker": "^1.2.3",
     "react-icons": "^4.7.1",
     "react-location-picker": "^1.5.0",
+    "react-vis": "^1.11.7",
     "zustand": "^4.1.5"
   },
   "devDependencies": {
