--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "chart.js": "^4.1.1",
+    "faker": "^6.6.6",
     "firebase": "^9.15.0",
     "next": "latest",
     "react": "18.2.0",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@ant-design/icons": "^4.8.0",
+    "@faker-js/faker": "^7.6.0",
     "@types/node": "18.11.3",
     "@types/react": "18.0.0",
     "@types/react-dom": "18.0.6",
