--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-geolocated": "^4.0.3",
     "react-google-map-picker": "^1.2.3",
     "react-icons": "^4.7.1",
+    "react-loading": "^2.0.3",
     "react-location-picker": "^1.5.0",
     "react-vis": "^1.11.7",
     "zustand": "^4.1.5"
