feat: admin dashboard modified

--- a/package.json
+++ b/package.json
@@ -11,14 +11,13 @@
     "faker": "^6.6.6",
     "firebase": "^9.15.0",
     "next": "latest",
-    "react": "18.2.0",
     "react-chartjs-2": "^5.1.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-geolocated": "^4.0.3",
-    "react-google-map-picker": "^1.2.3",
     "react-icons": "^4.7.1",
     "react-images-uploading": "^3.1.7",
+    "react-leaflet": "^4.2.0",
     "react-loading": "^2.0.3",
     "react-location-picker": "^1.5.0",
     "react-vis": "^1.11.7",
@@ -27,6 +26,7 @@
   "devDependencies": {
     "@ant-design/icons": "^4.8.0",
     "@faker-js/faker": "^7.6.0",
+    "@types/leaflet": "^1.9.0",
     "@types/node": "18.11.3",
     "@types/react": "18.0.0",
     "@types/react-dom": "18.0.6",
